hphp/test/slow/container-ref-init/array-init3.php.expectf

Fatal error: Collection element cannot be marked as reference in %s/array-init3.php on line 7
